# xeoxo_db

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/logs/: failed_size_chart_urls.csv  failed_urls.csv
data/master/: branch.csv  category.csv  collections.csv  color.csv  daongoc.json  inventory.csv  loyalty_tier.csv  material.csv  material_media.csv  measurement_type.csv  media.csv  payment_method.csv  product_line.csv  product_line_media.csv  product_line_temp.csv  product_variant.csv  province.sql  size_chart.csv  size_measurement.csv  size_option.csv
data/raw/: collection_url.csv  collections.csv  product_components.csv  product_lines.csv  product_url.csv  size_chart_images.csv
data/staging/: collections.csv  product_lines.csv
docs/: customerize.md  database_schema.md  grantee.csv  inventory_seed.md  material_media_load.md  plan-data.md  schema_access_control.md  storage_access_control.md  web_access_plan.md  web_access_spec.md
docs/report/: branch-feature-tracuu.md
ref/: product-detail.html
scripts/: load_all_master_data.py  reset_db_keep_storage.py  reset_storage_prefix.py
src/config/: settings.py
src/load/: add_inventory.py  load_branch.py  load_category.py  load_collection.py  load_color.py  load_line_category.py  load_loyalty_tier.py  load_materials.py  load_measurement_type.py  load_media.py  load_media_materials.py  load_media_product_lines.py  load_payment_method.py  load_product_component.py  load_product_line.py  load_product_line_media.py  (+8 more)
supabase/: config.toml
tests/: test_add_inventory.py  test_web_access.py
(+53 files in other folders)
