[project]
name = "xeoxo-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "lxml>=6.1.1",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "slugify>=0.0.1",
    "supabase>=2.31.0",
    "unicode>=2.9",
]
